criando rota para associar evidencias a casos
