# src/routes/caseRoutes.ts
@@ -8,9 +8,10 @@ import { authenticateToken } from "../middlewares/authMiddleware";
 const router = Router();
 
 router.post("/", authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.createCase);
-router.get("/case-title", authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.getCaseTitle);
 router.get("/", authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.listCases);
 router.put("/:caseId", authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.updateCase);
 router.delete("/:caseId", authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.deleteCase);
+
+router.get("/:caseId/evidences",authenticateToken, checkPermissions([Perfil.ADMIN, Perfil.PERITO]), CaseController.getEvidencesByCaseId);
 
 export default router;
